test/pending/neg/t5618.check
t5618.scala:12: error: could not find implicit value for parameter class1: Class1
  val class2 = new Class2
               ^
t5618.scala:18: error: could not find implicit value for parameter class1: Class1
  val class2 = new Class2
               ^
two errors found